--- a/style.css
+++ b/style.css
@@ -3,54 +3,107 @@ header {
     font-weight: bold;
     display: flex;
     justify-content: flex-end;
+    font-style: normal;
+   
 
     a {
         color: black;
         font-size: 30px;
-        padding: 1em;
-        /* height: 2o */
-        /* background: white; */
+        padding: 0.5em 1em;
+        background: white;
+                  
     }
 }
-
-p {
-    color: rgb(255, 255, 255);
-    font-size: 30px;
-    font-style: normal;
+.logo{
+    position: absolute; 
+    left: 1.5%;
+    top:20px;
 }
-
-h1 {
-    color: rgb(255, 255, 255);
-    font-size: 30px;
-    font-style: normal;
-}
-
-h2 {
-    color: rgb(255, 255, 255);
-    font-size: 50px;
-    font-style: normal;
-}
-
-p1 {
-    color: rgb(255, 255, 255);
-    font-size: 30px;
-    font-style: normal;
+.name{
+    color: rgb(0, 0, 0);
+        font-size: 30px;
+        position: absolute; 
+        left: 5%;
 }
 
 .hero {
     display: flex;
     align-items: center;
-    justify-content: center;
-    height: 80vh;
+    height: 90vh;
     background: url('Desktop - 5.jpg') no-repeat center center/cover;
+    position: relative; 
+
+    /* Hey I'm */
+    p { 
+        color: rgb(255, 255, 255);
+        font-size: 30px;
+        font-style: normal;
+        position: absolute; 
+        top: 28%; 
+        left: 40px;
+    }
+    /* Anjana Kuttamath */
+    h1 {
+        color: rgb(255, 255, 255);
+        font-size: 35px;
+        font-style: normal;
+        position: absolute; 
+        top: 35%; 
+        left: 40px;  
+    }
+    /* UI & UX Designer */
+    h2 {
+        color: rgb(255, 255, 255);
+        font-size: 65px;
+        font-style: normal;
+        position: absolute; 
+        top: 38%; 
+        left: 40px;
+    }
+    /* Description */
+    p1 {
+        color: rgb(255, 255, 255);
+        font-size: 30px;
+        font-style: normal;
+        position: absolute; 
+        top: 60%; 
+        left: 40px;
+    }
+}   
+
+
+.mail {
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-style: normal;
+    position: absolute; 
+    bottom: 40px; 
+    right: 20px; 
+    text-align: right; 
 }
+.address {
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-style: normal;
+    position: absolute; 
+    bottom: 10px; 
+    right: 20px; 
+    text-align: right; 
+}
+
 .hero1 {
     display:flex;
     align-items: center;
-    ;
+    p {
+        color: rgb(0, 0, 0);
+        font-size: 30px;
+        font-style: normal;
+    }
+    h1 {
+        color: rgb(9, 9, 9);
+        font-size: 30px;
+        font-style: normal;
+        display: center;
+    }
+        
 }
-
-/* .hey{
-                background-color: blue;
-
-            } */
