--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@ header {
     font-weight: bold;
     display: flex;
     justify-content: flex-end;
-    font-style: normal;
+    font-family:"Parkinsans", sans-serif;
    
 
     a {
         color: black;
-        font-size: 30px;
+        font-size: 20px;
         padding: 0.5em 1em;
         background: white;
                   
@@ -17,11 +17,12 @@ header {
 .logo{
     position: absolute; 
     left: 1.5%;
-    top:20px;
+    top:5px;
+    
 }
 .name{
     color: rgb(0, 0, 0);
-        font-size: 30px;
+        font-size: 20px;
         position: absolute; 
         left: 5%;
 }
@@ -36,8 +37,9 @@ header {
     /* Hey I'm */
     p { 
         color: rgb(255, 255, 255);
-        font-size: 30px;
+        font-size: 20px;
         font-style: normal;
+        font-family:"Parkinsans", sans-serif;
         position: absolute; 
         top: 28%; 
         left: 40px;
@@ -45,8 +47,9 @@ header {
     /* Anjana Kuttamath */
     h1 {
         color: rgb(255, 255, 255);
-        font-size: 35px;
+        font-size: 25px;
         font-style: normal;
+        font-family:"Parkinsans", sans-serif;
         position: absolute; 
         top: 35%; 
         left: 40px;  
@@ -54,18 +57,20 @@ header {
     /* UI & UX Designer */
     h2 {
         color: rgb(255, 255, 255);
-        font-size: 65px;
+        font-size: 55px;
         font-style: normal;
-        position: absolute; 
+        position: absolute;
+        font-family:"Parkinsans", sans-serif;
         top: 38%; 
         left: 40px;
     }
     /* Description */
     p1 {
         color: rgb(255, 255, 255);
-        font-size: 30px;
+        font-size: 20px;
         font-style: normal;
-        position: absolute; 
+        position: absolute;
+        font-family:"Parkinsans", sans-serif; 
         top: 60%; 
         left: 40px;
     }
@@ -77,6 +82,7 @@ header {
     font-size: 20px;
     font-style: normal;
     position: absolute; 
+    font-family:"Parkinsans", sans-serif;
     bottom: 40px; 
     right: 20px; 
     text-align: right; 
@@ -85,11 +91,36 @@ header {
     color: rgb(255, 255, 255);
     font-size: 20px;
     font-style: normal;
-    position: absolute; 
+    position: absolute;
+    font-family:"Parkinsans", sans-serif; 
     bottom: 10px; 
     right: 20px; 
     text-align: right; 
 }
+
+section{
+
+    display: flex;
+    flex-wrap: wrap;
+    .fun{
+        height: 50vh;
+        background:#333;
+        width: 30px;
+        height: 30px;
+        display: block;
+        &:hover{
+            border-radius: 50%, rgb(72, 28, 28);
+            background: #361a1a;
+        }
+        /* &:active{
+            border-radius: 50%;
+            background:rgb(250, 250, 250);
+        } */
+    }
+}
+
+
+
 
 .hero1 {
     display:flex;
