--- a/style.css
+++ b/style.css
@@ -1,30 +1,46 @@
+.page1 {
+    background: black;
+
+}
+
 header {
     color: black;
     font-weight: bold;
     display: flex;
     justify-content: flex-end;
-    font-family:"Parkinsans", sans-serif;
-   
+    font-family: "Parkinsans", sans-serif;
+    /* background: blue */
+
 
     a {
         color: black;
         font-size: 20px;
         padding: 0.5em 1em;
-        background: white;
-                  
+        /* background: white; */
+
     }
 }
-.logo{
-    position: absolute; 
-    left: 1.5%;
-    top:5px;
-    
+
+header a:hover {
+    color: #555;
 }
-.name{
+
+header h1:hover {
+    color: #555;
+}
+
+.logo {
+    position: absolute;
+    left: 1.5%;
+    top: 5px;
+
+}
+
+.name {
     color: rgb(0, 0, 0);
-        font-size: 20px;
-        position: absolute; 
-        left: 5%;
+    font-size: 20px;
+    position: absolute;
+    left: 5%;
 }
 
 .hero {
@@ -32,109 +48,246 @@ header {
     align-items: center;
     height: 90vh;
     background: url('Desktop - 5.jpg') no-repeat center center/cover;
-    position: relative; 
+    position: relative;
 
     /* Hey I'm */
-    p { 
+    p {
         color: rgb(255, 255, 255);
         font-size: 20px;
         font-style: normal;
-        font-family:"Parkinsans", sans-serif;
-        position: absolute; 
-        top: 28%; 
+        font-family: "Parkinsans", sans-serif;
+        position: absolute;
+        top: 32%;
         left: 40px;
     }
+
     /* Anjana Kuttamath */
     h1 {
         color: rgb(255, 255, 255);
         font-size: 25px;
         font-style: normal;
-        font-family:"Parkinsans", sans-serif;
-        position: absolute; 
-        top: 35%; 
-        left: 40px;  
+        font-family: "Parkinsans", sans-serif;
+        position: absolute;
+        top: 39%;
+        left: 40px;
     }
+
     /* UI & UX Designer */
     h2 {
         color: rgb(255, 255, 255);
         font-size: 55px;
         font-style: normal;
         position: absolute;
-        font-family:"Parkinsans", sans-serif;
-        top: 38%; 
+        font-family: "Parkinsans", sans-serif;
+        top: 40%;
         left: 40px;
     }
+
     /* Description */
     p1 {
         color: rgb(255, 255, 255);
         font-size: 20px;
         font-style: normal;
         position: absolute;
-        font-family:"Parkinsans", sans-serif; 
-        top: 60%; 
+        font-family: "Parkinsans", sans-serif;
+        top: 60%;
         left: 40px;
     }
-}   
+}
 
 
 .mail {
     color: rgb(255, 255, 255);
     font-size: 20px;
     font-style: normal;
-    position: absolute; 
-    font-family:"Parkinsans", sans-serif;
-    bottom: 40px; 
-    right: 20px; 
-    text-align: right; 
+    position: absolute;
+    font-family: "Parkinsans", sans-serif;
+    bottom: 40px;
+    right: 20px;
+    text-align: right;
 }
+
 .address {
     color: rgb(255, 255, 255);
     font-size: 20px;
     font-style: normal;
     position: absolute;
-    font-family:"Parkinsans", sans-serif; 
-    bottom: 10px; 
-    right: 20px; 
-    text-align: right; 
+    font-family: "Parkinsans", sans-serif;
+    bottom: 10px;
+    right: 20px;
+    text-align: right;
 }
 
-section{
+/* im passionate */
+.passion {
+    background-color: black;
+    color: rgb(253, 253, 253);
+    text-align: center;
+    font-size: 20px;
+    height: 30vh;
+    padding: 50px 20px;
+    font-style: normal;
+    font-family: "Parkinsans", sans-serif;
+}
 
+/* interaction */
+.interaction {
+    background: #000000;
     display: flex;
     flex-wrap: wrap;
-    .fun{
-        height: 50vh;
-        background:#333;
-        width: 30px;
-        height: 30px;
+
+    .fun {
+        height: 100vh;
+        width: 40.07px;
+        height: 40.07px;
+        background: #000000;
         display: block;
-        &:hover{
-            border-radius: 50%, rgb(72, 28, 28);
-            background: #361a1a;
+        transition: all 0.3s ease;
+        border-radius: 0%, rgb(72, 28, 28);
+
+        &:hover {
+           background: #5f1f1f;
         }
-        /* &:active{
+
+        &:active {
+            animation: transformToCircle 5s ease-out forwards;
             border-radius: 50%;
-            background:rgb(250, 250, 250);
-        } */
+            background: rgb(250, 250, 250);
+           
+        }
+
+        /* @keyframes transformToCircle {  
+            0% {
+            border-radius: 0;
+            background: #000000;
+            }
+            100% {
+             border-radius: 50%;
+            background: rgb(250, 250, 250);
+            } */
     }
 }
 
+/* whatido */
+.whatido {
+    height: 400px;
+    background-color: black;
+    color: rgb(253, 253, 253);
+    text-align: center;
+    padding: 40px 20px;
+    font-family: "Parkinsans", sans-serif;
+
+   
+    .cards {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 60px;
+    }
+
+    .card {
+        /* background-color: #0e0e0e; */
+        padding: 25px;
+        width: 425px;
+        text-align: center;
+    }
+
+    .card h3 {
+        font-size: 1.5rem;
+        margin-bottom: 15px;
+    }
+
+    .card p {
+        font-size: 1rem;
+        line-height: 1.5;
+    }
+}
+
+/* namebar */
+.namebar {
+    background-color: black;
+    color: rgb(253, 253, 253);
+    height: 160px;
+    font-size: 20px;
+
+
+
+    .subject {
+        text-align: right;
+        margin-right: 15px;
+        font-family: "Parkinsans", sans-serif;
+        text-wrap: center;
+
+    }
+
+    .schoolname {
+        text-align: right;
+        margin-right: 15px;
+        font-family: "Parkinsans", sans-serif;
+        text-wrap: center;
+    }
+
+}
+
+/* projects */
+.portfolio {
+    height: 130vh;
+    font-family: "Parkinsans", sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #000000;
+    color: #ffffff;
+    /* White text */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    padding: 50px;
+    text-align: center;
+
+
+    .portfolio-item {
+        background-color: #000000;
+        /* Slightly lighter black */
+        border-radius: 10px;
+        overflow: hidden;
+        /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4); */
+    }
+
+    .portfolio-item img {
+         width: 100%;
+        height: auto;   
+        display: block;
+    }
+
+    .portfolio-item h3 {
+        margin: 15px 0;
+        font-size: 1.5rem;
+    }
+
+    .portfolio-item:hover {
+         transform: scale(1.05);
+         transition: transform 0.3s ease;
+    }
+
+}
 
 
 
 .hero1 {
-    display:flex;
+    display: flex;
     align-items: center;
+
     p {
         color: rgb(0, 0, 0);
         font-size: 30px;
         font-style: normal;
     }
+
     h1 {
         color: rgb(9, 9, 9);
         font-size: 30px;
         font-style: normal;
         display: center;
     }
-        
+
 }
