--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -63,17 +63,17 @@ header h1:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 35vh;
-    font-size: 50rem;
-    font-weight: bold;
+    height: 50vh;
+    font-family: "Alfa Slab One", serif;
+    font-size: small;
+    font-style: normal;
     text-align: center;
     background: black;
     color: transparent;
 }
 
 .hello h1 {
-    font-size: 10rem;
-    font-weight: bold;
+    font-size: 15rem;
     background: url('Desktop - 5.jpg') no-repeat center center / cover;
     -webkit-background-clip: text;
     background-clip: text;
