--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -4,13 +4,18 @@
 }
 
 header {
+    position: sticky; /* Keeps the header stuck at the top */
+    top: 0; /* Position the header at the very top */
+    z-index: 1000; /* Ensures the header is above other elements */
+    background: white; /* Add a background color to prevent transparency */
     color: black;
     font-weight: bold;
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-family: "Parkinsans", sans-serif;
-    /* padding: 10px 20px; */
+    padding: 5px 20px;
+    box-shadow: 0 2px 5px rgba(231, 152, 27, 0.1);
 }
 
 .logo-container {
@@ -73,7 +78,7 @@ header h1:hover {
 }
 
 .hello h1 {
-    font-size: 15rem;
+    font-size: 20rem;
     background: url('Desktop - 5.jpg') no-repeat center center / cover;
     -webkit-background-clip: text;
     background-clip: text;
@@ -86,7 +91,7 @@ header h1:hover {
     color: rgb(253, 253, 253);
     text-align: center;
     font-size: 20px;
-    height: 30vh;
+    height: 50vh;
     padding: 10px;
     font-family: "Parkinsans", sans-serif;
 
