--- a/style.css
+++ b/style.css
@@ -254,17 +254,18 @@ header h1:hover {
     /* White text */
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    padding: 50px;
+    gap: 20px;
+    padding: 60px;
     text-align: center;
 
 
     .portfolio-item {
         background-color: #000000;
         /* Slightly lighter black */
-        border-radius: 10px;
+        border-radius: 20px;
+        padding: 10px;
         overflow: hidden;
-        /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4); */
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
     }
 
     .portfolio-item img {
@@ -276,6 +277,9 @@ header h1:hover {
     .portfolio-item h3 {
         margin: 15px 0;
         font-size: 1.5rem;
+        color: white;
+        font-weight: bold;
+        text-decoration: none;
     }
 
     .portfolio-item:hover {
