--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -121,7 +121,7 @@ header h1:hover {
 /* im passionate */
 .passion {
     /* background-color: black; */
-    color: rgb(253, 253, 253);
+    /* color: rgb(253, 253, 253); */
     text-align: center;
     font-size: 20px;
     height: 50vh;
@@ -131,6 +131,8 @@ header h1:hover {
     .passion h1 {
         font-size: 1.5rem;
         margin-bottom: 10px;
+        color: rgb(0, 0, 0);
+        filter: invert(1);
     }
 
     .passion p {
