--- a/resumestyle.css
+++ b/resumestyle.css
@@ -71,7 +71,7 @@ body{
         padding-left: 50px;
         font-family: "Parkinsans", sans-serif;
     }
-    p1{
+    .description{
         font-size: 15px;
         padding-left: 50px;
         font-family: "Parkinsans", sans-serif;
